2005-03-04 Duncan Coutts <duncan@coutts.uklinux.net>

	* Makefile.am: Fix one of the GHC 6.4 build failures by changing the
	root path that c2hs_config.h gets #include'ed from. Previously it was
	ok to #include relative to the build root whereas GHC 6.4 only allows
	it to be relative to the source file being compiled. Move
	tools/c2hs/toplevel/C2HSConfig.hs from tools_c2hs_c2hsLocal_SOURCES
	to nodist_tools_c2hs_c2hsLocal_SOURCES so that the file does not end
	up in the .tar.gz distribution. It is generated from C2HSConfig.hs.in
	so C2HSConfig.hs should not be present in a clean tree. Also change
	the MOSTLYCLEANFILES to reflect the changed location of the .deps
	files.

	* gtk/Graphics/UI/Gtk/Abstract/Widget.chs: remove
	widgetLockAccelerators and widgetUnlockAccelerators as they do not
	exist in Gtk+ anymore (probably since version 2.0).

	* tools/apiGen/ApiGen.hs: remove pointless and verbose warnings.

	* tools/apiGen/ModuleScan.hs: collect export list from existing
	modules.

	* tools/apiGen/CodeGen.hs: generate signals and methods export lists
	in the same order as in the original modules. Also, improve the signal
	code generaton - though it's still not quite there yet for object
	types.

	* tools/apiGen/Marshal.hs: For signals, produce the Haskell type as
	well as the signal handler tag. For object types this is not right yet
	because it uses the object type rather than the object class. Also
	change the marshaling of object parameter types to cover all four
	possibilities of: (leaf class/non-leaf class) x (ordinary/maybe type).

2005-03-01 Duncan Coutts <duncan@coutts.uklinux.net>

	* tools/apiGen/CodeGen.hs: do deprecated and version ifdefs a bit
	better especialy if the whole module is new or deprecated.

	* tools/apiGen/Docs.hs: seperate documentation of callbacks from
	documentation of methods. Generalise the summary field to be list of
	paragraphs rather than just a single paragraph so that we can add